Giriş kontrolü ve tasarım testleri

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,19 +12,19 @@
         android:roundIcon="@mipmap/bike_icon_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity" />
-        <activity android:name=".DeviceListActivity">
+        <activity android:name=".MainActivity"
+            android:configChanges="orientation|screenSize"/>
+        <activity android:name=".DeviceListActivity"
+            android:configChanges="orientation|screenSize"/>
+        <activity android:name=".SplashScreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".SplashScreen"
-            android:theme="@style/SplashTheme">
-
-        </activity>
+        <activity android:name=".WelcomeActivity"
+            android:configChanges="orientation|screenSize"/>
     </application>
 
 </manifest>
