--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,8 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="io.evall.greenbike">
 
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.BLUETOOTH" />
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -28,7 +30,8 @@
         <activity
             android:name=".WelcomeActivity"
             android:configChanges="orientation|screenSize" />
-        <activity android:name=".HistoryView"></activity>
+        <activity android:name=".HistoryView" />
+        <activity android:name=".RanklistActivity"></activity>
     </application>
 
 </manifest>
