--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,8 +31,12 @@
         <activity
             android:name=".WelcomeActivity"
             android:configChanges="orientation|screenSize" />
-        <activity android:name=".HistoryView" />
-        <activity android:name=".RanklistActivity"></activity>
+        <activity android:name=".HistoryView"
+            android:configChanges="orientation|screenSize"
+            android:parentActivityName=".MainActivity"/>
+        <activity android:name=".RanklistActivity"
+            android:configChanges="orientation|screenSize"
+            android:parentActivityName=".MainActivity"/>
         <meta-data
             android:name="io.fabric.ApiKey"
             android:value="34897caf6b8b3c29f9e337955a7eb33db14d12c6" />
